2.3.7:
-Minor revisions
-Fixed error logs purge bug
-Fixed audio alerts bug
-UX work with enabled volume filter for exchange price alert messages
-------------------------------------------------------------------



-------------------------------------------------------------------
2.3.8:
-Fixed minor SMTP bug (added new to address every addTo call, even if the same address)
-Default configuration tweaks
-Missing dollar sign in volume column, after logic overhaul
-Minor revisions in help page
-Cryptopia market volume API support
-------------------------------------------------------------------



-------------------------------------------------------------------
2.3.9:
-Tidied up disclaimer UX
-Added Crypto Tools section
-Added QR code generator for addresses
-------------------------------------------------------------------



-------------------------------------------------------------------
2.4.0:
-Updated Okex API to v3
-UI, config, APIs, UX, and other tweaks
-Semantics / consistency on filename and subdirectory structures
-Coin config structure optimization
-Fixed proxy checker bugs
-Basic configuration check with error logging, and results on settings page
-------------------------------------------------------------------



-------------------------------------------------------------------
2.4.1:
-Better consistency for coin config format
-Proof of existence info in misc-docs subdirectory
-External Tools section on 'Other Crypto Tools' page
-Probable exchange trade volume discrepancy detection
-Check for (and create if needed) the cache sub-directory structure
-------------------------------------------------------------------



-------------------------------------------------------------------
2.4.2:
-Updated links on external resources page
-------------------------------------------------------------------







































































































