@@ -1022,6 +1022,8 @@ app doing the data requests, not a malicious bot)
 -------------------------------------------------------------------
 2.4.2:
 -Updated links on external resources page
+-Added additional config formatting checks (reports apparent formatting errors)
+-Better delimiter compatibility for config formatting
 -------------------------------------------------------------------
 
 
